--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"node ./src/index.ts",
     "build": "tsc",
     "dev": "nodemon src/index.ts --exec ts-node"
   },
