--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node ./src/index.ts",
+    "start":"node ./dist/index.js",
     "build": "tsc",
     "dev": "nodemon src/index.ts --exec ts-node"
   },
